force-app/main/default/objects/Quiz__c/Quiz__c.object-meta.xml
<CustomObject>
    <label>Quiz Question</label>
    <nameField>
        <displayFormat>Quiz-{0000}</displayFormat>
        <label>Quiz Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quiz Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>