force-app/main/default/objects/Quiz__c/fields/Answer_Option_2__c.field-meta.xml
<CustomField>
    <fullName>Answer_Option_2__c</fullName>
    <label>Answer: Option - 2</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>