force-app/main/default/objects/Quiz__c/fields/Answer_Option_3__c.field-meta.xml
<CustomField>
    <fullName>Answer_Option_3__c</fullName>
    <label>Answer: Option -3</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>