force-app/main/default/objects/Quiz__c/fields/Correct_Answer__c.field-meta.xml
<CustomField>
    <fullName>Correct_Answer__c</fullName>
    <label>Correct Answer</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>