force-app/main/default/objects/Quiz__c/fields/Ques_Set__c.field-meta.xml
<CustomField>
    <fullName>Ques_Set__c</fullName>
    <label>Ques - Set</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Set 4</fullName>
                <default>true</default>
                <label>Set 4</label>
            </value>
            <value>
                <fullName>Set 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>