force-app/main/default/objects/Quiz__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>